apps/backend-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend-api

  template:
    metadata:
      labels:
        app: backend-api

    spec:
      containers:
        - name: backend-api
          image: 719572784863.dkr.ecr.us-east-1.amazonaws.com/backend-api
          imagePullPolicy: Always

          ports:
            - containerPort: 8080
