apps/backend-api/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-api

spec:

  selector:
    app: backend-api

  ports:
  - port: 80
    targetPort: 8080
